kubernets/nodered/dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodered
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodered
  template:
    metadata:
      labels:
        app: nodered
    spec:
      containers:
        - name: nodered
          image: nodered/node-red:latest
          resources:
            limits:
              cpu: 250m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          ports:
            - containerPort: 1880
          volumeMounts:
            - name: nodered-data
              mountPath: /data
      volumes:
        - name: nodered-data
          persistentVolumeClaim:
            claimName: nodered-data
---
apiVersion: v1
kind: Service
metadata:
  name: nodered-internal
spec:
  type: ClusterIP
  selector:
    app: nodered
  ports:
    - name: nodered
      port: 1880
      targetPort: 1880
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodered-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: nodered.cluster.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodered-internal
                port:
                  number: 1880
